# python-artoolkit

./: CMakeLists.txt  Makefile  README.md  artoolkit.py  artoolkitmodule.cpp  setup.py
examples/: Makefile  artoolkit.py  moon.py  opengl.py  planet.py  planets.xml  simpleTest.c
examples/Data/: patt.blank  patt.terra  patt.x
examples/planets/: moon.py  planet.py  planets.py  planets.xml
examples/planets/Data/: patt.jupiter  patt.x
src/: artoolkitmodule.cpp
